--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <li><a href="#about">About Us</a></li>
                     <li><a href="#research">Research</a></li>
                     <li><a href="#facility">Facility</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#footer-contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
