--- a/index.html
+++ b/index.html
@@ -155,11 +155,25 @@
                 <span class="read-more-link">Lihat Modul &rarr;</span>
             </a>
             
-            <a href="link_skill_theory.html" class="research-card research-skill reveal-item right delay-3">
+            <a href="mcu.html" class="research-card research-skill reveal-item right delay-3">
                 <span class="card-icon">III</span>
-                <h4>Teori & Pengembangan Skill</h4>
-                <p>Pembelajaran teori semikonduktor, teknik <b>troubleshooting</b>, dan penggunaan simulasi perangkat lunak.</p>
-                <span class="read-more-link">Pelajari Lebih Lanjut &rarr;</span>
+                <h4>Praktikum Mikrokontroler</h4>
+                <p>Membuat rangkaian dengan menggunakan mikrokontroler (Arduino) dengan simulasi IDE (Arduino IDE)</p>
+                <span class="read-more-link">Lihat Modul &rarr;</span>
+            </a>
+
+            <a href="mpf.html" class="research-card research-skill reveal-item left delay-4">
+                <span class="card-icon">IV</span>
+                <h4>Praktikum Mikroprosesor</h4>
+                <p>Fokus pada pemahaman terhadap mikroprosesor (Zilog-Z80) dengan bahasa assembly yang telah di konversi menjadi Op-Code</p>
+                <span class="read-more-link">Lihat Modul &rarr;</span>
+            </a>
+
+            <a href="sensor.html" class="research-card research-skill reveal-item up delay-5">
+                <span class="card-icon">V</span>
+                <h4>Praktikum Sistem Sensor</h4>
+                <p>Fokus pada pemahaman berbagai jenis sensor dan prinsip kerjanya, baik secara umum maupun secara khusus</p>
+                <span class="read-more-link">Lihat Modul &rarr;</span>
             </a>
         </div>
     </div>
